--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.main{
+  height: 100vh;
+  background-position: right center;
+  background-color: rgb(244, 206, 157);
+  background-size: 30% 30%;
+  background-repeat: no-repeat;
+  justify-content: right;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: flex;
+  /* background-image: url("C:\Users\devan\OneDrive\Desktop\YouTube\LOGO-Transparent.png"); */
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  margin: 20px;
+  margin-top: 0px;
+  text-align: center;
+  border-radius: 25px;
+  width:650px;
+  padding: 10px;
+  background-color:rgba(75, 16, 16, 0.238);
+  backdrop-filter: blur(7px);
 }
